# Qwen-COBOL

./: .env.example  .gitignore  PREREQUISITES.md  README.md  floofy-pondering-lagoon.md  pyproject.toml
config/: inference.yaml  training_fallback_14b.yaml  training_qwen36_27b.yaml
docker/neo4j/: docker-compose.yml
docker/qdrant/: docker-compose.yml
docker/vllm-inference/: docker-compose.yml
docs/: BENCHMARK_RESULTS.md  DATA_CARD.md  DELTA_VS_COBOL_CODER.md  MODEL_CARD.md  RESEARCH_LOG.md  gcp_training_setup.md
notebooks/: kaggle_01_data_ingest.ipynb  kaggle_02_synth_data.ipynb  kaggle_02_synth_gen_gemini.ipynb  kaggle_07_eval_full.ipynb  lightning_03_teacher_batch.ipynb  lightning_04_cpt.ipynb  lightning_05_sft.ipynb  lightning_06_dpo.ipynb
scripts/: _peek.py  check_hf_storage.py  clean_corpus.py  fix_sft_encoding.py  gen_spec_data.py  inspect_corpus.py  inspect_sft.py  kaggle_build_corpus.py  modal_autofix_spec.py  modal_eval.py  modal_eval_sft.py  modal_sanity_goback.py  modal_teacher_bulk.py  modal_train_sft.py  modal_validate_spec.py  train_sft.py
src/deploy/: merge_dora.py  quantize_awq.py  quantize_fp8.py  vllm_serve.sh
src/eval/: cobol_javatrans_runner.py  cobolceval_runner.py  compile_check.py  leaderboard_report.py  semantic_eq.py
src/pipeline/: clean.py  copybook_inliner.py  dedupe.py  difficulty_scorer.py  ingest.py  parse.py  validate.py
src/retrieval/: graph_builder.py  hybrid_retriever.py  lazy_graphrag.py  vector_index.py
src/synth/: curriculum_sampler.py  distill_orchestrator.py  dpo_pairs.py  import_mainframebench.py  teacher_alibaba.py  teacher_compare.py  teacher_gemini.py  teacher_vllm.py  thinking_traces.py
src/train/: cpt.py  dpo.py  sft.py
